# Editor_software

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  llm_service_utils.py  nlp_pipeline.py  pyproject.toml  verify_out.txt
SOP/: SOP-IT-002.txt  SOP-IT-003.txt
app/: __init__.py  main.py
backend/: .env.example  Dockerfile  requirements.txt
backend/action/: prompts.py  runtime.py  service.py  utils.py
backend/app/: agent_routes.py  ai_routes.py  auth_routes.py  chat_history_routes.py  client_profile_routes.py  database.py  main.py  models.py  profile_routes.py  public_routes.py  routes.py  schemas.py  webhook_routes.py
backend/chain/: __init__.py  rag_chain.py
docs/: PROJECT_STRUCTURE.md
frontend/: Dockerfile  index.html  nginx.conf  vite.config.js
scripts/: README.md  accept_latest_ai_suggestion.py  analyze_desktop_sops.py  check_compliance_elements.py  clear_database.py  db_verify.py  debug_latest_style_suggestion.py  debug_style_candidates.py  debug_style_override_runtime.py  fix_phase8_german_profile_link.py  fix_qdrant_index.py  normalize_validation_seed.py  phase9_17_utils.py  reanalyze_profile_sources.py  repair_profile_md.py  start_backend_8001.py  test_editor_target_resolver.mjs  test_phase4_nlp_parameters.py  test_phase5_profile_generation.py  test_phase7_sop_editor_context.py  upload_it_sops.py  upload_pdfs.py  validate_generated_profiles.py  verify_chat_sop_context_actions.py  verify_editorial_profile_rewrite.py  verify_profile_md_used_in_rewrite_improve.py  verify_rag_features.py  vps-docker-update.sh
(+177 files in other folders)
