[project]
name = "cybrain-qs"
version = "0.1.0"
description = "Hybrid RAG SOP search — FastAPI backend, Qdrant, PostgreSQL"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic==1.14.0",
    "asyncpg>=0.31.0",
    "bcrypt>=4.0.0,<4.1.0",
    "docling>=2.0.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "numpy>=1.26.0",
    "openai>=2.0.0",
    "paramiko>=4.0.0",
    "passlib[bcrypt]==1.7.4",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.27.2",
    "pydantic[email]>=2.12.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "pytesseract>=0.3.10",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "scp>=0.15.0",
    "sentence-transformers>=5.4.1",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]>=0.44.0",
]

[project.optional-dependencies]
nlp = [
    "langdetect>=1.0.9",
    "spacy>=3.8.0",
    "textstat>=0.7.4",
]
scripts = [
    "reportlab>=4.2.0",
    "requests>=2.32.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "TC*.py"]
testpaths = ["testsprite_tests"]
